# PODIO

./: CITATION.cff  LICENSE  README.md  SPEECH_ONTOLOGY.rdf  instructions-es.md  pyproject.toml
demo/: docker-compose.yml
docs/: .htaccess  index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.rdf  ontology.ttl
docs/images/: DocumentOntology.drawio.xml
docs/latest/: index-en.html  ontology.jsonld  ontology.owl  ontology.ttl
docs/provenance/: provenance-en.html  provenance-en.ttl
docs/sections/: abstract-en.html  crossref-en.html  description-en.html  introduction-en.html  ns-en.html  overview-en.html
docs/v1.0/: index-en.html
docs/v2.0/: index-en.html  ontology.jsonld  ontology.nt  ontology.ttl
mappings/: candidates.json  ideologies.json  manifestos_madrid.csv  plans_madrid.csv  political_parties.json  political_parties_mappings.yml  political_party_manifesto.yml  sioc_mappings.yml  sioc_related.yml
notebooks/: podio.ipynb
ontology/: DocumentOntology.drawio.xml  SPEECH_ONTOLOGY.rdf  podio_ontology.rdf
ontology/documentation/: index-en.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl
ontology/requirements/: README.md  requirements.csv  requirements.xlsx
queries/: CQ1.rq  CQ10.rq  CQ11.rq  CQ12.rq  CQ13.rq  CQ14.rq  CQ15.rq  CQ2.rq  CQ3.rq  CQ4.rq  CQ5.rq  CQ6.rq  CQ7.rq  CQ8.rq  CQ9.rq  QR1.rq  QR10.rq  QR11.rq  QR12.rq  QR13.rq  QR14.rq  QR15.rq  QR16.rq  QR17.rq  QR18.rq  QR19.rq  QR2.rq  QR20.rq  QR21.rq  QR22.rq  QR23.rq  QR24.rq  QR3.rq  QR4.rq  QR5.rq  QR6.rq  QR7.rq  QR8.rq  QR9.rq  R1.rq  (+19 more)
(+24 files in other folders)
